# Hello-Hinata

./: CMakeLists.txt  main.qml  main_application.cpp  main_application.h
